# cortex

./: ARCHITECTURE.md  README.md
.github/workflows/: ci.yml
ai-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
ai-service/app/: config.py  db.py  logging.py  main.py  metrics.py  models.py  schemas.py
ai-service/app/agent/: agent.py  planner.py  tools.py
ai-service/app/embeddings/: embedder.py
ai-service/app/generation/: answer_service.py  extractive.py  llm.py
ai-service/app/ingestion/: chunker.py  hashing.py  loaders.py  pipeline.py
ai-service/app/retrieval/: reranker.py  vector_store.py
ai-service/app/routers/: documents.py  health.py  query.py
ai-service/tests/: conftest.py  test_agent.py  test_api.py  test_chunker.py  test_embeddings.py  test_extractive.py  test_hashing.py  test_loaders.py  test_pipeline.py  test_planner.py  test_reranker.py  test_vector_store.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CitationList.tsx  Layout.tsx  ProtectedRoute.tsx  StatusBadge.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  CollectionsPage.tsx  LoginPage.tsx  RegisterPage.tsx
gateway/: Dockerfile  pom.xml
gateway/src/main/java/com/cortex/gateway/: GatewayApplication.java
gateway/src/main/java/com/cortex/gateway/config/: AdminSeeder.java  JacksonConfig.java  OpenApiConfig.java  SecurityConfig.java  WebClientConfig.java
gateway/src/main/java/com/cortex/gateway/domain/: DocumentCollection.java  DocumentEntity.java  DocumentStatus.java  QueryHistoryEntity.java  Role.java  User.java
gateway/src/main/java/com/cortex/gateway/exception/: AiServiceException.java  DuplicateEmailException.java  GlobalExceptionHandler.java  InvalidCredentialsException.java  InvalidInternalApiKeyException.java  RateLimitExceededException.java  ResourceNotFoundException.java
gateway/src/main/java/com/cortex/gateway/observability/: CorrelationIdFilter.java
gateway/src/main/java/com/cortex/gateway/web/: AuthController.java  (+5 more)
gateway/src/main/resources/: application.properties
gateway/src/main/resources/db/migration/: V1__init_schema.sql
gateway/src/test/java/com/cortex/gateway/: AbstractIntegrationTest.java  GatewayApplicationTests.java
infra/: docker-compose.yml
infra/postgres-init/: 01-extensions.sql
worker/: .env.example  .gitignore  Dockerfile  pyproject.toml
worker/tests/: test_ai_client.py  test_gateway_client.py  test_hashing.py  test_jobs.py  test_watcher.py
worker/worker/: ai_client.py  config.py  gateway_client.py  hashing.py  jobs.py  logging.py  queue.py  watcher.py  watcher_main.py
(+44 files in other folders)
