[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-ai-service"
version = "0.1.0"
description = "Cortex RAG engine: ingestion, retrieval, reranking, extractive/LLM generation, agentic queries."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.5",
    "sentence-transformers>=3.2.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "markdown>=3.7",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.27.2",
    "python-multipart>=0.0.12",
    "openai>=1.51.0",
    "anthropic>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "testcontainers[postgres]>=4.8.1",
    "psycopg2-binary>=2.9.9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 115
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = ["tests/"]
