[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-worker"
version = "0.1.0"
description = "Cortex ingestion automation: folder watcher, Redis/RQ queue, retries, idempotent ingestion calls."
requires-python = ">=3.12"
dependencies = [
    "rq>=2.0.0",
    "redis>=5.1.0",
    "watchdog>=5.0.3",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "fakeredis>=2.25.0",
    "respx>=0.21.1",
]

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 115
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = ["tests/"]
